--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "next": "13.4.7",
     "postcss": "^8.4.24",
